atualizando pessoas com put